--- a/.github/workflows/ci-module.yml
+++ b/.github/workflows/ci-module.yml
@@ -12,15 +12,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu, windows, macos]
-        node: ['*', '14', '12']
+        node: ['*', '16', '14']
 
     runs-on: ${{ matrix.os }}-latest
     name: ${{ matrix.os }} node@${{ matrix.node }}
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
+          check-latest: ${{ matrix.node == '*' }}
       - name: install
         run: npm install
       - name: test
